--- a/styles/main.css
+++ b/styles/main.css
@@ -16,12 +16,6 @@
             box-sizing: border-box;
     max-width: 1146px;
     margin: auto; }
-  .header__logo {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 32px;
-    color: #fff;
-    margin-right: 143px; }
   .header__content {
     padding-left: 98px;
     padding-right: 98px;
@@ -39,11 +33,20 @@
   .nav__list {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex; }
+    display: flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline; }
   .nav__item {
     margin-right: 63px; }
     .nav__item_act {
       padding: 0 70px; }
+    .nav__item_logo {
+      font-style: normal;
+      font-weight: bold;
+      font-size: 32px;
+      color: #fff;
+      margin-right: 143px; }
   .nav__link {
     color: #fff;
     font-weight: bold;
@@ -64,9 +67,8 @@
     .nav__link:hover {
       color: #e1e1f3; }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1200px) {
   .center {
-    max-width: 640px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -79,29 +81,36 @@
             align-items: center; }
   .header {
     background: #56ccf2;
-    height: 1000px; }
+    height: 700px; }
+    .header__content {
+      padding-left: 10px;
+      padding-right: 10px;
+      text-align: center; }
   .header__menu {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center; }
-  .header__logo {
-    font-size: 36px; }
+    justify-items: center; }
   .nav__list {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column; }
+    padding-right: 15px;
+    padding-left: 15px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
   .nav__item {
     margin-left: 0;
-    margin-bottom: 4px; }
+    margin-bottom: 4px;
+    margin-right: 40px; }
+    .nav__item_logo {
+      font-size: 56px; }
   .nav__link {
-    font-size: 24px; }
+    font-size: 36px; }
     .nav__link_active::after {
-      width: 80px; }
+      width: 120px; }
   .section_web {
     padding: 20px; } }
 
@@ -168,19 +177,37 @@ html {
   .header__button:hover {
     background-color: #e1e1f3; }
 
-@media screen and (max-width: 580px) {
+@media screen and (max-width: 698px) {
   .header__button {
-    width: 150px;
-    height: 40px; }
+    width: 200px;
+    height: 56px; }
   .header {
     background: #56ccf2;
     height: 1200px; }
+  .header__menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    justify-items: center; }
   .nav__list {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    padding-left: 40px; } }
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .nav__item {
+    margin-left: 0;
+    margin-bottom: 4px;
+    margin-right: 0; }
+    .nav__item_logo {
+      font-size: 56px; }
+  .nav__link {
+    font-size: 36px; }
+    .nav__link_active::after {
+      width: 120px; } }
 
 .photo {
   display: -webkit-box;
@@ -291,7 +318,7 @@ html {
   .photo {
     margin-top: 0; }
   .photo__img {
-    height: 200px;
+    height: 300px;
     width: 100%;
     -o-object-fit: cover;
        object-fit: cover; }
@@ -457,7 +484,12 @@ html {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
-            flex-direction: column; }
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .process__title {
+      padding-top: 0; }
     .process__inform {
       -ms-flex-wrap: wrap;
           flex-wrap: wrap; }
@@ -471,7 +503,7 @@ html {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-top: 0;
+    margin-top: 80px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center; } }
@@ -638,9 +670,11 @@ html {
     margin-top: 19px;
     margin-bottom: 69px; }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 856px) {
   .features {
-    height: 1100px; }
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
   .features__photo {
     display: none; } }
 
@@ -695,13 +729,16 @@ html {
 
 @media screen and (max-width: 850px) {
   .features__text {
+    padding-left: 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    padding-left: 0;
+    font-size: 20px;
     padding-top: 40px; }
     .features__text::before {
       top: -40px;
@@ -814,8 +851,7 @@ html {
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-          justify-content: center;
-  padding-left: 160px; }
+          justify-content: center; }
   .people__item {
     margin: 0 40px;
     width: 314px; }
@@ -1065,7 +1101,7 @@ html {
   .navigation__link:hover {
     color: #31588a; }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 480px) {
   .footer {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1086,7 +1122,22 @@ html {
     .navigation__item {
       padding-bottom: 10px; } }
 
-@media screen and (max-width: 1140px) {
+@media screen and (max-width: 999px) {
+  .footer {
+    margin-top: 80px; }
+    .footer__design {
+      margin-right: 0; }
+  .navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+    .navigation__list {
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; }
+    .navigation__item {
+      padding-bottom: 10px; } }
+
+@media screen and (max-width: 1200px) {
   .header {
     background: #56ccf2; }
   .photo {
