--- a/styles/main.css
+++ b/styles/main.css
@@ -66,6 +66,8 @@
         border-radius: 32px; }
     .nav__link:hover {
       color: #e1e1f3; }
+  .nav #toggle {
+    display: none; }
 
 @media screen and (max-width: 1200px) {
   .center {
@@ -184,30 +186,108 @@ html {
   .header {
     background: #56ccf2;
     height: 1200px; }
-  .header__menu {
+  .menu__toggle {
+    opacity: 0;
+    position: absolute;
+    top: -100%; }
+  .menu__toggle:checked ~ .menu__btn > .menu__span {
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg); }
+  .menu__toggle:checked ~ .menu__btn > .menu__span::before {
+    top: 0;
+    -webkit-transform: rotate(0);
+            transform: rotate(0); }
+  .menu__toggle:checked ~ .menu__btn > .menu__span::after {
+    top: 0;
+    -webkit-transform: rotate(90deg);
+            transform: rotate(90deg); }
+  .menu__toggle:checked ~ .nav__list {
+    opacity: 1;
+    top: 40px; }
+  .menu__btn {
+    display: block;
+    position: relative;
+    margin: 20px auto 0;
+    width: 40px;
+    height: 100%;
+    cursor: pointer;
+    z-index: 1; }
+  .menu__span,
+  .menu__span::before,
+  .menu__span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: #253757;
+    -webkit-transition-duration: .3s;
+            transition-duration: .3s; }
+  .nav__item_logo {
+    display: none; }
+  .menu__span::before {
+    content: '';
+    top: -8px; }
+  .menu__span::after {
+    content: '';
+    top: 8px; }
+  .header__nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    justify-items: center; }
+    justify-items: center;
+    position: relative; }
   .nav__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    text-align: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center; }
-  .nav__item {
-    margin-left: 0;
-    margin-bottom: 4px;
-    margin-right: 0; }
-    .nav__item_logo {
-      font-size: 56px; }
+            align-items: center;
+    position: absolute;
+    opacity: 0;
+    margin: 0 auto;
+    top: -100%;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+    width: 90%;
+    padding: 70px 0;
+    list-style: none;
+    background-color: #fff;
+    border-radius: 20px;
+    -webkit-box-shadow: 2px 0px 6px rgba(0, 0, 0, 0.4);
+            box-shadow: 2px 0px 6px rgba(0, 0, 0, 0.4);
+    -webkit-transition: opacity 2s, top 1s, background-color 0.3s, color 0.3s;
+    transition: opacity 2s, top 1s, background-color 0.3s, color 0.3s; }
   .nav__link {
-    font-size: 36px; }
+    display: block;
+    margin-left: 30px;
+    color: #56ccf2;
+    border-radius: 15px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    text-decoration: none;
+    -webkit-transition-duration: .1s;
+            transition-duration: .1s; }
     .nav__link_active::after {
-      width: 120px; } }
+      width: 80px; }
+  .nav__link:hover {
+    color: #fcc304; }
+  .nav__link:active {
+    color: #fcc304; } }
 
 .photo {
   display: -webkit-box;
