--- a/styles/main.css
+++ b/styles/main.css
@@ -184,8 +184,7 @@ html {
     width: 200px;
     height: 56px; }
   .header {
-    background: #56ccf2;
-    height: 1200px; }
+    background: #56ccf2; }
   .menu__toggle {
     opacity: 0;
     position: absolute;
@@ -497,7 +496,7 @@ html {
   text-align: center;
   color: #253757; }
 
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 600px) {
   .cards {
     display: -webkit-box;
     display: -ms-flexbox;
