--- a/styles/main.css
+++ b/styles/main.css
@@ -205,14 +205,6 @@ html {
   .menu__toggle:checked ~ .menu__btn > .menu__span {
     -webkit-transform: rotate(45deg);
             transform: rotate(45deg); }
-    .menu__toggle:checked ~ .menu__btn > .menu__span::before, .menu__toggle:checked ~ .menu__btn > .menu__span::after {
-      display: block;
-      position: absolute;
-      width: 100%;
-      height: 4px;
-      background-color: #253757;
-      -webkit-transition-duration: 0.3s;
-              transition-duration: 0.3s; }
   .menu__toggle:checked ~ .menu__btn > .menu__span::before {
     top: 0;
     -webkit-transform: rotate(0);
@@ -236,10 +228,24 @@ html {
     display: none; }
   .menu__span::before {
     content: '';
-    top: -8px; }
+    top: -8px;
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: #253757;
+    -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s; }
   .menu__span::after {
     content: '';
-    top: 8px; }
+    top: 8px;
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: #253757;
+    -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s; }
   .header__nav {
     display: -webkit-box;
     display: -ms-flexbox;
