--- a/styles/main.css
+++ b/styles/main.css
@@ -224,28 +224,24 @@ html {
     height: 100%;
     cursor: pointer;
     z-index: 1; }
+  .menu__span,
+  .menu__span::before,
+  .menu__span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    background-color: #253757;
+    -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s; }
   .nav__item_logo {
     display: none; }
   .menu__span::before {
     content: '';
-    top: -8px;
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    background-color: #253757;
-    -webkit-transition-duration: 0.3s;
-            transition-duration: 0.3s; }
+    top: -8px; }
   .menu__span::after {
     content: '';
-    top: 8px;
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    background-color: #253757;
-    -webkit-transition-duration: 0.3s;
-            transition-duration: 0.3s; }
+    top: 8px; }
   .header__nav {
     display: -webkit-box;
     display: -ms-flexbox;
