--- a/styles/main.css
+++ b/styles/main.css
@@ -224,8 +224,9 @@ html {
     height: 100%;
     cursor: pointer;
     z-index: 1; }
-  .menu__span::after,
-  .menu__span::before {
+  .menu__span,
+  .menu__span::before,
+  .menu__span::after {
     display: block;
     position: absolute;
     width: 100%;
